5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1735_2525.log
== TEST (2019-05-26 23:05:27) 
-- CODE:
n = int(input("Digite um numero: "))
c = 0
while n > 0:
	d = n % 2
	c = c + 1
print(c)
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:12:55) 
-- CODE:
n = int(input("Digite um numero: "))
c = 0

while n != 0:
	c = c + 1
if n % 2 == 0:
	print("1 divisor")
else:
	print(c, "divisores")
	
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:16:16) 
-- CODE:
n = int(input("Digite um numero: "))
c = 0
d = 0

while n != 0:
	d = d + 1
	c = c + 1
if n % 2 == 0:
	print("1 divisor")
else:
	print(c, "divisores")
	
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:17:23) 
-- CODE:
n = int(input("Digite um numero: "))
c = 0
d = 0

while n != 0:
	d = n % 2
	c = c + 1
if n % 2 == 0:
	print("1 divisor")
else:
	print(c, "divisores")
	
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:18:05) 
-- CODE:
n = int(input("Digite um numero: "))
c = 0
d = 0

while n != 0:
	d = n % 2
	c = c + 1
print(c)
	
	
	
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:21:55) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n != 0:
	d = d + (n%2)
	c = c + 1
print(c)
-- OUTPUT:
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:22:20) 
-- CODE:

c = 0
d = 0

while n != 0:
	d = d + (n%2)
	c = c + 1
	n = int(input("Digite um numero inteiro: "))
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while n != 0:
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:22:28) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n != 0:
	d = d + (n%2)
	c = c + 1
	n = int(input("Digite um numero inteiro: "))
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:23:24) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n != 0:
	d = d + (n%2)
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:27:52) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n != 0:
	d = d + (n%2)
	c = c + 1
if d == 1:
	print("1 divisor")
else:
	print(d, "divisores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:28:08) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n > 0:
	d = d + (n%2)
	c = c + 1
if d == 1:
	print("1 divisor")
else:
	print(d, "divisores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 23:32:41) 
-- CODE:
n = int(input("Digite um numero inteiro: "))
c = 0
d = 0

while n > 0:
	n = n % 2
	d = d + n
	c = c + 1
if d == 1:
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:33:41) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % 2 == 0:
		print(n)
	c = c + 1


	
-- OUTPUT:
12
12
12
12
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:33:52) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % 2 == 0:
		print(n)
	c = c + 1


	
-- OUTPUT:
12
12
12
12
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:34:17) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % 2 == 0:
		print(c)
	c = c + 1


	
-- OUTPUT:
2
4
6
8
10
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:36:44) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % 2 == 0:
		print(c)
	c = c + 1


	
-- OUTPUT:
2
4
6
8
10
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:37:50) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % 2 == 0:
		print(c)
	if c % 3 == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
2
3
4
6
6
8
9
10
12
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:38:06) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:

	if c % 3 == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
3
6
9
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:38:41) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:

	if c / 3 == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
3
6
9
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:39:28) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c / 3 == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
3
6
9
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:40:08) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if c % n == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:40:34) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if n % c == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:51) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if 1 % c == 0:
		print("1 divisor")
	else n % c == 0:
		print(c)
	c = c + 1
	


	
-- ERROR:
File "XXXX", line 6
    else n % c == 0:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:47:56) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
while c < n + 1:
	if n % c == 0:
		print(c)
	c = c + 1
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:49:07) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if 1 % c == 0:
	print("1 divisor")
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1 divisor
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:49:36) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if 1 % c == 0:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1 divisor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:49:42) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if 1 % c == 0:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- EXECUTION TIME:
0.163658
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1 divisor
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1 divisor
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1 divisor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:03) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if 1 % c == 0:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1 divisor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:32) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:36) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:50:45) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:52:37) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
			print(s, "divisores")
		c = c + 1
		s = s + c
	


	
-- OUTPUT:
1
0 divisores
2
2 divisores
3
5 divisores
4
9 divisores
6
20 divisores
12
77 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:53:01) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
		
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:53:49) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
		s = s + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:56:47) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		s = s + c
		c = c + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
78 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:56:56) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		s = s + 1
		c = c + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:57:02) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		s = s + 1
		c = c + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:59:59) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		c = c + 1
		if n % c == 0:
			print(c)
	print(s, "divisores")
		
	


	
-- OUTPUT:
2
3
4
6
12
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:00:17) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:00:33) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
			c = c + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:00:49) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
			c = c + 1
		
	


	
-- OUTPUT:
1
2
3
4
6
12
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:01:05) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
		
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:24:54) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
		s = s + 1
		
	


	
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:25:26) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
s = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			print(c)
		c = c + 1
		s = s + 1
	print(s, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:18:30) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
i = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			i = i +1
			print(c)
		c = c + 1
		
	print(i, "divisores")
		
	


	
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:18:37) 
-- CODE:
n = int(input("Digite um numero: "))
c = 1
i = 0
if n == 1:
	print("1 divisor")
else:
	while c < n + 1:
		if n % c == 0:
			i = i +1
			print(c)
		c = c + 1
		
	print(i, "divisores")
		
	


	
-- EXECUTION TIME:
0.14722
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
